backend(security): CORS設定をSecurityConfigに統合し、WebConfigを削除